--- a/src/UByte.Format/UByte.Format.fsproj
+++ b/src/UByte.Format/UByte.Format.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Compare.fs" />
     <Compile Include="Format.fsi" />
     <Compile Include="Format.fs" />
   </ItemGroup>
