--- a/src/UByte.Format/UByte.Format.fsproj
+++ b/src/UByte.Format/UByte.Format.fsproj
@@ -10,11 +10,11 @@
     <Compile Include="Compare.fs" />
     <Compile Include="Model.fsi" />
     <Compile Include="Model.fs" />
-    <Compile Include="WriteModule.fsi" />
     <Compile Include="Span.fs" />
+    <Compile Include="WriteModule.fsi" />
+    <Compile Include="WriteModule.fs" />
     <Compile Include="ParseModule.fsi" />
     <Compile Include="ParseModule.fs" />
-    <Compile Include="ValidateModule.fsi" />
   </ItemGroup>
 
 </Project>
