--- a/test/UByte.HelloWorld/UByte.HelloWorld.fsproj
+++ b/test/UByte.HelloWorld/UByte.HelloWorld.fsproj
@@ -10,6 +10,7 @@
     <Compile Include="HelloWorld.fs" />
 
     <PackageReference Include="Expecto" Version="9.0.4" />
+    <PackageReference Include="Unquote" Version="6.1.0" />
 
     <ProjectReference Include="$(RootDirectory)\src\UByte.Format\UByte.Format.fsproj" />
   </ItemGroup>
