--- a/src/UByte.Assembler/UByte.Assembler.fsproj
+++ b/src/UByte.Assembler/UByte.Assembler.fsproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <Compile Include="Parser.fsi" />
     <Compile Include="Parser.fs" />
+    <Compile Include="Assembler.fsi" />
+    <Compile Include="Assembler.fs" />
 
     <PackageReference Include="FParsec" Version="1.1.1" />
 
