--- a/src/UByte.Assembler/UByte.Assembler.fsproj
+++ b/src/UByte.Assembler/UByte.Assembler.fsproj
@@ -7,10 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Parser.fsi" />
-    <Compile Include="Parser.fs" />
-    <Compile Include="Assembler.fsi" />
-    <Compile Include="Assembler.fs" />
+    <Compile Include="Assemble.fsi" />
+    <Compile Include="Assemble.fs" />
 
     <PackageReference Include="FParsec" Version="1.1.1" />
 
