Add module to separate parsing code from assembling code

--- a/src/UByte.Assembler/UByte.Assembler.fsproj
+++ b/src/UByte.Assembler/UByte.Assembler.fsproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Parser.fsi" />
+    <Compile Include="Parser.fs" />
     <Compile Include="Assemble.fsi" />
     <Compile Include="Assemble.fs" />
 
