--- a/src/UByte.Assembler/UByte.Assembler.fsproj
+++ b/src/UByte.Assembler/UByte.Assembler.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="$(RootDirectory)\src\HelperBuilders.fs" />
     <Compile Include="Parser.fsi" />
     <Compile Include="Parser.fs" />
     <Compile Include="Assemble.fsi" />
