Implement naive mark and sweep garbage collection

--- a/src/UByte.Runtime/UByte.Runtime.fsproj
+++ b/src/UByte.Runtime/UByte.Runtime.fsproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="MemoryManagement.fsi" />
+    <Compile Include="MemoryManagement.fs" />
     <Compile Include="Runtime.fsi" />
     <Compile Include="Runtime.fs" />
 
