--- a/src/UByte.Runtime/UByte.Runtime.fsproj
+++ b/src/UByte.Runtime/UByte.Runtime.fsproj
@@ -9,10 +9,13 @@
   <ItemGroup>
     <Compile Include="MemoryManagement.fsi" />
     <Compile Include="MemoryManagement.fs" />
+    <Compile Include="Interpreter.fsi" />
+    <Compile Include="Interpreter.fs" />
     <Compile Include="Runtime.fsi" />
     <Compile Include="Runtime.fs" />
 
     <ProjectReference Include="$(RootDirectory)\src\UByte.Format\UByte.Format.fsproj" />
+    <ProjectReference Include="$(RootDirectory)\src\UByte.Resolver\UByte.Resolver.fsproj" />
   </ItemGroup>
 
 </Project>
