Implement rudimentary generation of speedscope profiling information

--- a/src/runmdl/runmdl.fsproj
+++ b/src/runmdl/runmdl.fsproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Speedscope.fsi" />
+    <Compile Include="Speedscope.fs" />
     <Compile Include="Program.fs" />
 
     <PackageReference Include="Argu" Version="6.1.1" />
