--- a/src/MiddleC.Compiler/MiddleC.Compiler.fsproj
+++ b/src/MiddleC.Compiler/MiddleC.Compiler.fsproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <Compile Include="Parser.fsi" />
     <Compile Include="Parser.fs" />
+    <Compile Include="Semantics.fsi" />
+    <Compile Include="Semantics.fs" />
 
     <PackageReference Include="FParsec" Version="1.1.1" />
 
