Update MiddleC parser to allow full type names

--- a/src/MiddleC.Compiler/MiddleC.Compiler.fsproj
+++ b/src/MiddleC.Compiler/MiddleC.Compiler.fsproj
@@ -15,6 +15,7 @@
     <PackageReference Include="FParsec" Version="1.1.1" />
 
     <ProjectReference Include="$(RootDirectory)\src\UByte.Format\UByte.Format.fsproj" />
+    <ProjectReference Include="$(RootDirectory)\src\UByte.Resolver\UByte.Resolver.fsproj" />
   </ItemGroup>
 
 </Project>
