--- a/src/UByte.Format/UByte.Format.fsproj
+++ b/src/UByte.Format/UByte.Format.fsproj
@@ -15,6 +15,8 @@
     <Compile Include="WriteModule.fs" />
     <Compile Include="ParseModule.fsi" />
     <Compile Include="ParseModule.fs" />
+    <Compile Include="CodeBuilder.fsi" />
+    <Compile Include="CodeBuilder.fs" />
   </ItemGroup>
 
 </Project>
