--- a/src/MiddleC.targets
+++ b/src/MiddleC.targets
@@ -20,6 +20,7 @@
 
   <Target Name="Clean">
     <Delete Files="$(OutputPath)" />
+    <MSBuild Projects="@(ProjectReference)" Properties="OutputDirectory=$(OutputDirectory)" Targets="Clean" />
   </Target>
 
   <Target Name="BuildProjectReferences">
